Update YouTube Shorts Performance Analysis.ipynb

--- a/YouTube Shorts Performance Analysis.ipynb
+++ b/YouTube Shorts Performance Analysis.ipynb
@@ -794,7 +794,7 @@
    "source": [
     "### Conclusion:-\n",
     "### Statistical Significance:-  The P-Value ($\\text{0.3111}$) is greater than the standard significance level of $\\alpha = \\text{0.05}$.\n",
-    "### Result:-  You FAIL TO REJECT the Null Hypothesis ($\\text{H}_0$).\n",
+    "### Result:-  FAIL TO REJECT the Null Hypothesis ($\\text{H}_0$).\n",
     "### Interpretation:-  Despite the Medium duration videos having a numerically higher mean engagement ratio ($\\text{0.5287}$ vs. $\\text{0.2916}$), this difference is not statistically significant. This means that, within the observed variation and sample size, the apparent advantage of the Medium duration videos could be due to random chance, and we cannot confidently conclude that $\\text{21-40s}$ videos generate better engagement than $\\text{0-20s}$ videos across the entire population of YouTube Shorts.\n",
     "### Strategic Implication:- The recommendation to focus solely on **Medium ($\\text{21-40s}$) ** videos is not statistically validated by this specific test. Content creators should remain flexible, as both short and medium videos are statistically indistinguishable in terms of average engagement quality. Further segmentation (e.g., performing this T-Test within high-performing categories like Food or Tech) might be necessary to uncover category-specific optimal lengths."
    ]
